Fixed bug on arrows on mobile

--- a/src/assets/styles/_datepicker.scss
+++ b/src/assets/styles/_datepicker.scss
@@ -38,9 +38,12 @@ $twoMonthWidthAndSpacing: $twoMonthWidth + $spacing;
 		@include clearfix;
 
 		input.date-picker-trigger {
+			-webkit-appearance: none;
+			border-radius: 0;
 			box-sizing: border-box;
 			cursor: text;
-			width: 150px;
+			width: 50%;
+			max-width: 150px;
 			float: left;
 			font-size: 14px;
 			color: $grayText;
@@ -116,22 +119,40 @@ $twoMonthWidthAndSpacing: $twoMonthWidth + $spacing;
 				align-items: center;
 
 				> i {
+					-webkit-appearance: none;
 					position: absolute;
-					top: 0;
+					top: 2px;
 					left: 0;
 					padding: 5px 8px;
 					cursor: pointer;
 					font-weight: bold;
 					font-style: normal;
 					font-size: 0.7em;
+					&:before {
+						content: '';
+						display: block;
+						width: 0;
+						height: 0;
+						border-top: 6px solid transparent;
+						border-bottom: 6px solid transparent;
+						border-right: 8px solid $grayText;
+					}
+					&:hover:before {
+						border-right-color: black;
+					}
 
 					+ i {
 						right: 0;
 						left: auto;
-					}
-
-					&:hover {
-						color: black;
+						&:before {
+							border-top: 6px solid transparent;
+							border-bottom: 6px solid transparent;
+							border-right: none;
+							border-left: 8px solid $grayText;
+						}
+						&:hover:before {
+							border-left-color: black;
+						}
 					}
 				}
 				.month-title {
