--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,6 +1,6 @@
 body {
 	background-color: #e5e5e5;
-	padding: 20px;
+	padding: 10px;
 	font-family: Arial;
 }
 
